fix: incorrect flex-wrap in id projects

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ nav a {
 #projects {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -104,7 +105,7 @@ nav a {
   display: flex;
   justify-content: left;
   align-items: center;
-  margin-left: 22%;
+  /* margin-left: 22%; */
 }
 
 .project {
